tests/ui/fail_user_error_scheme_receiver_type_mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/fail_user_error_scheme_receiver_type_mismatch.rs:21:47
   |
3  |     fn hello(&self, prefix: &str) -> String;
   |        ----- arguments to this function are incorrect
...
21 | #[thin_delegate::fill_delegate(scheme = |f| f(self.key()))]
   |                                               ^^^^^^^^^^ expected `&_`, found `usize`
   |
   = note: expected reference `&_`
                   found type `usize`
note: method defined here
  --> tests/ui/fail_user_error_scheme_receiver_type_mismatch.rs:3:8
   |
3  |     fn hello(&self, prefix: &str) -> String;
   |        ^^^^^
   = note: this error originates in the macro `__thin_delegate__trampoline2` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing here
   |
21 | #[thin_delegate::fill_delegate(scheme = |f| f(&self.key()))]
   |                                               +
